[css] fix#3 for B154 - text wrap for nav links

--- a/public/sximo/css/sximo-dark-blue.css
+++ b/public/sximo/css/sximo-dark-blue.css
@@ -2435,5 +2435,5 @@ li.L9 {
   margin-right: 0;
 }
 #sidemenu.nav .nav li > a {
-  margin-right: 6px;
+  margin-left: 6px;
 }
