--- a/public/sximo/css/sximo-light-blue.css
+++ b/public/sximo/css/sximo-light-blue.css
@@ -2505,5 +2505,5 @@ table#itemTable input[type="text"]{
   margin-right: 0;
 }
 #sidemenu.nav .nav li > a {
-  margin-right: 6px;
+  margin-left: 6px;
 }
