--- a/public/sximo/css/sximo.css
+++ b/public/sximo/css/sximo.css
@@ -2489,5 +2489,5 @@ table.table-striped tr th
   margin-right: 0;
 }
 #sidemenu.nav .nav li > a {
-  margin-right: 6px;
+  margin-left: 6px;
 }
